--- a/parcial 2/SpringBootDemo-master/listar.html
+++ b/parcial 2/SpringBootDemo-master/listar.html
@@ -51,7 +51,7 @@ $(document).ready(function(){
 		 var obj = data,  // get entry object (array) from JSON data
 	     ul = $("<ul>");                    // create a new ul element
 	    // iterate over the array and build the list
-	     ul.append("<li> " + obj.id + " --- " + obj.name + " --- " + obj.category + "</li>");
+	     ul.append("<li> " + obj.id + " --- " + obj.name + " --- " + obj.description + "</li>");
 	     $("#div4").append(ul);    // add the list to the DOM
 	 });
  });
